main.css
/* ... */
.topForm img.infoImg{
	position: relative;
	top: 4px;
	vertical-align: top;
}
.topForm .2col{
	width: 45%;
}
.topForm .right {
	float: none !important; /* Edited because of http://code.google.com/p/gbif-providertoolkit/issues/detail?id=838 */
	margin-bottom:0;
	margin-left:0;
	margin-right:0;
	margin-top:0;
	position: relative;
}
.checkbox {
  	padding-top: 1em;
}
.checkbox input {	
	display: inline;
	width: 5%;
	margin-left: 0.5em;
}
.checkbox label {
	display: inline-block;	
}
.checkbox img {
	display: inline;
	margin-left: 1em;
	padding-top: 0.5em;
}
.checkbox div {
	display: inline-block;
	width: 200px;
}

form h2 {
	clear:left;
	font-size:1.6em;
	font-weight:normal;
}
form.half{		
	width: 50%;		
}
div.third{
	clear: both;
}
div.third input{
	width: 85%;
}
div.third select{
	max-width:90%;
	width: 85%;
}
div.third img{
	max-width:90%;	
	vertical-align: middle;
}
div.third > div{
	width: 30%;
	float: left;
}
div.half{
	clear: both;	
}
div.half:after{
    /*Having something in the content such as a period 
    gives a more consistent results across browsers.*/
    content: "."; 
    display: block; 
    height: 0; 
    font-size:0;	
    clear: both; 
    visibility:hidden;
}
div.half > div{
	width: 49%;
	float: left;
}
div.half input{
	width: 85%;
}
div.half select{
	max-width:90%;
	width: auto;
}

div.halfcolumn {
	float: left;
	margin: 0px 0px 0px 0px;
	width: 50%;
}
div.halfcolumn select{
	width: 85%;
}
div.halfcolumn input{
	width: 85%;
}
/*div.textinline {  	
 	position: relative;
}
div.textinline img {
	padding-right: 1em;
	padding-top: 1em;
}
div.textRight{
	margin-right: 200px;
}
div.textLeft{
	position:absolute;	
	width: 720px;
	right:0;
	top:0;
}*/


/* overlay div for modal views */
#modalbox { 
	display: none;
	position: absolute; 
	left: 0px; 
	top: 0px; 
	width:100%; 
	height:100%; 
	text-align:center; 
	z-index: 999;
}
#modalback {
	position: absolute; 
	left: 0px; 
	top: 0px; 
	width:100%; 
	height:100%; 
	background-color: #000;
	filter:alpha(opacity=80);
	opacity: 0.8;
	-moz-opacity:0.8; 
}
#modalcontainer{
	position: relative;
	display: block;
	width: 100%; 
	margin-top: 80px; 
	min-height: 50px;
	text-align:center; 
}
#modalcontent {
	display: inline-block;
	margin: 0px auto; 
	min-width: 100px;
	background-color: #fff; 
	border:1px solid #000; 
	padding:15px; 
}


/* simple table */
table.simple th{
	background-color: #fff;
	text-align: left;
	text-decoration: underline;
	padding-bottom: 10px;
}
table.simple tr{
	background-color: #f1f1f1;
}
table.simple tr.linebreak{
	background-color: #fff;
	height: 1em;
}
table.simple tr.even{
	background-color: #fff;
}

/* sortable table */
/*table.sortable th{
	background-color: #fff;
	text-align: left;
	text-decoration: underline;
	padding-bottom: 10px;
}
table.sortable td{
	font-size: small;
}
table.sortable tr{
	background-color: #f1f1f1;
}
table.sortable tr.linebreak{
	background-color: #fff;
	height: 1em;
}
table.sortable tr.even{
	background-color: #fff;
}*/

#resourcestable {	
	width: 100%;
}

/* #taxonKeywords th{	
		min-width: 60px;
		width: 60px;
} */

/* horizontal list */
ul.horizontal {
	margin:0; 
	padding:0; 
	list-style:none; 
}
li.horizontal {
	display:inline; 
	margin:0; 
	padding: 0px 10px 0px 0px; 
}

ul.simple {
	margin:0; 
	padding:0; 
	list-style:none;
    text-align: left;	 
}


/* 
	2 column layout used for definitions with first column being the title, second the body for a nested table with more details
	the actions div inside the title is SUPPOSED to stay at the bottom of the title div - but that needs to be FIXED !!! 
*/
div.definition {
	width: 100%;
	overflow: hidden;
	margin-bottom: 10px; 
}

div.definition div.title{
	width: 20%;
	float: left;
/*    background-color: #f1f1f1;*/
	padding: 5px 0 5px 5px;
	margin-bottom: -100000px; 
	padding-bottom: 100000px; 
}
div.definition div.head{
	font-weight: bold;
}
div.definition div.actions { 
	margin: 10px 0 0 0;
}
div.definition div.actions form{ 
	margin: 0;
}
div.definition div.body{ 
	width: 78%;
	float: right;
/*    font-size: 12px; */
	padding: 5px 0px;
	margin-bottom: -2000px; 
	padding-bottom: 2000px; 
}
div.definition div.body > div{ 
    padding-bottom: 10px;
}
div.definition div.titleOverview{
	width: 30%;
	float: left;
/*    background-color: #f1f1f1;*/
	padding: 5px 0 5px 5px;
	margin-bottom: -100000px; 
	padding-bottom: 100000px; 
}
div.titleOverview input[type="submit"], div.titleOverview button{
	float: right;
	margin-right: 5px;
}
div.definition div.bodyOverview{
	width: 68%;
	float: right;
/*    font-size: 12px; */
	padding: 5px 0px;
	margin-bottom: -2000px; 
	padding-bottom: 2000px; 
}

div.details{
    padding-bottom: 0px;
}
div.details table{
    margin: 0;
    padding: 0;
}
div.details div.subitem{
	padding-left:20px;
}

div.details table th, 
div.details td{
    color: #999;
/*    font-size: 11px; */
    text-align: left;
/*    padding:0px 10px 0px 0px;*/
    vertical-align:text-top;
}

div.details table th.title, 
div.details td{
    color: #666;
}
div.detailsSource{
	padding-top: 20px;
	padding-bottom: 0px;
}
div.detailsSource table{
    margin: 0;
    padding: 0;
}
div.detailsSource table th, 
div.detailsSource td{
    color: #999;
/*    font-size: 11px;*/
    text-align: left;
/*    padding:0px 10px 0px 0px;*/
    vertical-align:text-top;
}
div.detailsSource table th.title, 
div.detailsSource td{
    color: #666;
}

/* confirmation plugin */
.question {
	position: absolute;
	display: inline;
	text-align: center;
	max-width: 200px;
	font-size: 13px;
	line-height: 1.5em;
	background-color: #ddd;
	padding: 10px;
	text-shadow: 0px 1px 0px #fff;
    -moz-border-radius: 0.5em;
    border-radius: 0.5em;
	opacity: 0;
}

.yes, .cancel {
	margin-top: .5em;
	margin-right: 1em;
	padding: 2px 8px;
	cursor: pointer;
	display: inline-block;
	color: #fff;
	text-shadow: 0px 1px 0px #000;
	background-color: #666;
    -moz-border-radius: 0.3em;
    border-radius: 0.3em;
}
/* ... */

